Fix: Aligns everything to a grid.

--- a/burt.css
+++ b/burt.css
@@ -13,6 +13,12 @@ a {
   text-decoration: underline;
 }
 
+p {
+    font-size: 30px;
+    margin-bottom: 20px;
+    text-align: left;
+}
+
 .pull-left {
   float: left;
 }
@@ -33,6 +39,7 @@ a {
   text-transform: uppercase;
   color: #002A45;
   margin-bottom: 0;
+  margin-top: 10px;
   font-size: 34px;
   font-weight: 400;
 }
@@ -49,7 +56,6 @@ a {
 }
 
 .sub-header {
-  max-width: 524px;
   margin:0 auto 100px auto;
 
 }
@@ -57,7 +63,7 @@ a {
 .sub-header p {
   font-size: 24px;
   line-height: 1.5;
-  margin-bottom:50px;
+  margin-bottom:25px;
   color: #002A45;
 }
 
@@ -77,6 +83,8 @@ a {
     column-count: 7;
     column-gap: 20px;
     margin-bottom: 80px;
+    min-width: 960px;
+    padding-left: 0;
 }
 
 .language ul li {
@@ -109,12 +117,6 @@ a {
     margin: 0 auto;
 }
 
-p {
-    font-size: 30px;
-    margin-bottom: 20px;
-    text-align: left;
-}
-
 label {
 
 }
@@ -140,13 +142,11 @@ textarea, .html {
 
 .get-started {
   background: #fafafa;
-  height: 200px;
+  padding: 75px 0;
 }
 
 .get-started .inner-container {
-  width: 800px;
-  margin: 0 auto;
-  padding: 70px;
+  height: 60px;
 }
 
 .get-started h2 {
@@ -159,6 +159,7 @@ textarea, .html {
 .footer {
   margin-bottom: 10px;
   padding: 0 50px;
+  min-width: 960px;
 }
 
 .footer img {
